Changelog for skalibs.

In 2.14.5.0
-----------

 - Bugfixes.
 - Support for shared libraries on MacOS.
 - crc32c implementation: skalibs/crc32c.h


In 2.14.4.0
-----------

 - Bugfixes.
 - Documentation fixes. (This file, in particular.)
 - New functions: buffer_timed_getv, buffer_timed_putv,
   timed_read, timed_readv, timed_Write, timed_writev
 - New sysdeps, better handling of variable sysdeps
 - New functions: sagetexecname, tain_addmsec, millisleep


In 2.14.3.0
-----------

 - Bugfixes.
 - Newish function: mininetstring_read().
    (was previously removed in 2.7.0.0)
 - New header: cplz.h
 - Install .a to /usr/lib by default.


In 2.14.2.0
-----------

 - Support for midipix and old MacOS X. (More sysdeps.)
 - New gol.h header (a take on getopt_long).
 - New mkptemp3 function.


In 2.14.1.1
-----------

 - Bugfixes.


In 2.14.1.0
-----------

 - Bugfixes.
 - Portability improvements.
 - New socket_sendnb46_g() and socket_recvnb46_g() macros.


In 2.14.0.1
-----------

 - Bugfixes.


In 2.14.0.0
-----------

 - Bugfixes.
 - New accessor function: selfpipe_fd().
 - New functions: slurpn(), openslurpnclose().
 - slurp() and openslurpclose() are now macros.
 - New strerr macros to warn with a "fatal" message.
 - New cdb functions: cdb_hashv(), cdbmake_addv().
 - child_spawn() revamp. Prototype change (last arg is a size_t).
 - case_lowerb() and friends now use ctype.h functions.
 - case_str() removed, strcasestr() fallback implementation added.
 - cspawn(): finally unifying fork() and posix_spawn().
 - Better support for nonstandard posix_spawn subfunctions.
 - Lots of new sysdeps.


In 2.13.1.1
-----------

 - Bugfixes.


In 2.13.1.0
-----------

 - New macro: SKALIBS_PATH_MAX, in posixishard.h.
Defined to 4096 on systems that do not define PATH_MAX.
 - New function: sals().


In 2.13.0.0
-----------

 - Bugfixes.
 - New functions: buffer_timed_put(), buffer_timed_puts().
 - strerr.h revamped. strerr_die, strerr_warn, strerr_diesys, strerr_warnsys