@@ -21,6 +21,7 @@
 <ul>
  <li> Support for shared libraries on MacOS. </li>
  <li> New <tt>crc32c</tt> function. </li>
+ <li> New <tt>skalibs/prog.h</tt> header, for PROG modifications </li>
 </ul>
 
 <h2> in 2.14.4.0 </h2>
